update bug & Fonts

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <link href = "https://fonts.googleapis.com/css?family=Tangerine&effect=fire-animation" rel="stylesheet"/>
+  <!-- <link href = "https://fonts.googleapis.com/css?family=Nanum+Pen+Script&effect=fire-animation" rel="stylesheet"/> -->
+  <!-- <link rel="stylesheet" href="./index.css"> -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
